--- a/Source/RemoteSupport/Resources/Strings.resx
+++ b/Source/RemoteSupport/Resources/Strings.resx
@@ -250,8 +250,8 @@
     <comment>Text to show in change status dropdown choice in request details card.</comment>
   </data>
   <data name="EndUserNotificationText" xml:space="preserve">
-    <value>We have received your request with chat session #{0}\n
-    Please note that request that comes in after TSD operating hours (Mon-Fri 8am-8pm, Sat 8am-2pm) will be attended on the next business day.</value>
+    <value>We have received your request with chat session #{0}. &lt;br/&gt;
+    Please note that request that comes in after TSD operating hours &lt;b&gt;(Mon-Fri 8am-8pm, Sat 8am-2pm)&lt;/b&gt; will be attended on the next business day.</value>
     <comment>Text to show EndUser notification when request is submitted.</comment>
   </data>
   <data name="SmeAssignedStatus" xml:space="preserve">
@@ -411,7 +411,7 @@
     <comment>Text to show when user want to edit closed request.</comment>
   </data>
   <data name="DescriptionText" xml:space="preserve">
-    <value>Details (Max 500 Characters)</value>
+    <value>Details</value>
     <comment>Text to show description in request submitted card.</comment>
   </data>
   <data name="RequestNumberText" xml:space="preserve">
@@ -423,7 +423,7 @@
     <comment>Text to show request type in request submitted card.</comment>
   </data>
   <data name="TitleDisplayText" xml:space="preserve">
-    <value>What is it about? (Max 100 Characters)</value>
+    <value>What is it about?</value>
     <comment>Text to show as title text in new request card.</comment>
   </data>
   <data name="WithdrawErrorMessage" xml:space="preserve">
