--- a/Source/RemoteSupport/Resources/Strings.resx
+++ b/Source/RemoteSupport/Resources/Strings.resx
@@ -144,6 +144,9 @@
   <data name="NormalText" xml:space="preserve">
     <value>Chat</value>
     <comment>Text to show on the radio button when selected normal.</comment>
+  <data name="CategoryOneText" xml:space="preserve">
+    <value>Problem</value>
+    <comment>Text to show on the drop down when selected Problem.</comment>
   </data>
   <data name="RequestSubmittedContent" xml:space="preserve">
     <value>For reference, here's what I shared with the on-call team.</value>
