--- a/Source/RemoteSupport/Resources/Strings.resx
+++ b/Source/RemoteSupport/Resources/Strings.resx
@@ -433,7 +433,7 @@
     <value>Contact Option</value>
     <comment>Text to show request type in request submitted card.</comment>
   </data>
-  <data name="RequestCategoryText" xml:space="preserve">
+  <data name="CategoryTypeText" xml:space="preserve">
     <value>Type of Request</value>
     <comment>Text to show category type in request submitted card.</comment>
   </data>
