--- a/Source/RemoteSupport/Resources/Strings.resx
+++ b/Source/RemoteSupport/Resources/Strings.resx
@@ -246,7 +246,7 @@
     <comment>Text to show in Request details card for Expert Team</comment>
   </data>
   <data name="SeverityButtonText" xml:space="preserve">
-    <value>Change Mode of Contact</value>
+    <value>Change Contact Options</value>
     <comment>Text to show severity on button in request details card.</comment>
   </data>
   <data name="SmeRequestDetailText" xml:space="preserve">
@@ -350,7 +350,7 @@
     <comment>Text to show if title field is empty.</comment>
   </data>
     <data name="CategoryValidationText" xml:space="preserve">
-    <value>Input is required</value>
+    <value>Category is required</value>
     <comment>Text to show if title field is empty.</comment>
   </data>
   <data name="GroupName" xml:space="preserve">
