--- a/Source/RemoteSupport/Resources/Strings.resx
+++ b/Source/RemoteSupport/Resources/Strings.resx
@@ -457,6 +457,10 @@
     <value>Something went wrong while saving your request. Please try again in few minutes.</value>
     <comment>Text to show error when the request is not save in the azure storage.</comment>
   </data>
+  <data name="TextboxErrorText" xml:space="preserve">
+    <value>Kindly type New Request and input your details. Other messages typed in the chatbox will not be received.</value>
+    <comment>Text to show error when staff types in the chatbox.</comment>
+  </data>  
   <data name="CancelButtonText" xml:space="preserve">
     <value>Cancel</value>
     <comment>Text to show for button action.</comment>
