--- a/Source/RemoteSupport/Resources/Strings.resx
+++ b/Source/RemoteSupport/Resources/Strings.resx
@@ -142,19 +142,19 @@
     <comment>Text to show in confirmation card.</comment>
   </data>
   <data name="NormalText" xml:space="preserve">
-    <value>Chat</value>
+    <value>Teams Chat</value>
     <comment>Text to show on the radio button when selected normal.</comment>
   </data>
   <data name="CategoryOneText" xml:space="preserve">
-    <value>Problem</value>
+    <value>Problem - &lt;p style="color:#95A5A6;"&gt;to fix an item that was working before &lt;/p&gt;</value>
     <comment>Text to show on the drop down when selected Problem.</comment>
   </data>
   <data name="CategoryTwoText" xml:space="preserve">
-    <value>Enquiry</value>
+    <value>Enquiry - &lt;p style="color:#95A5A6;"&gt;to ask for information &lt;/p&gt;</value>
     <comment>Text to show on the drop down when selected Enquiry.</comment>
   </data>
   <data name="CategoryThreeText" xml:space="preserve">
-    <value>Request</value>
+    <value>Request - &lt;p style="color:#95A5A6;"&gt;to install, modify, add or create &lt;/p&gt;</value>
     <comment>Text to show on the drop down when selected Request.</comment>
   </data>
   <data name="RequestSubmittedContent" xml:space="preserve">
@@ -170,7 +170,7 @@
     <comment>Text to show on the update button in adaptive card.</comment>
   </data>
   <data name="UrgentText" xml:space="preserve">
-    <value>Call back</value>
+    <value>Teams Call Back</value>
     <comment>Text to show on the radio button when selected urgent.</comment>
   </data>
   <data name="WithdrawConfirmation" xml:space="preserve">
@@ -442,7 +442,7 @@
     <comment>Text to show category type in request submitted card.</comment>
   </data>
   <data name="TitleDisplayText" xml:space="preserve">
-    <value>Contact Number</value>
+    <value>Call Back Number</value>
     <comment>Text to show as title text in new request card.</comment>
   </data>
   <data name="WithdrawErrorMessage" xml:space="preserve">
@@ -482,7 +482,7 @@
     <comment>Text to show in card.</comment>
   </data>
   <data name="TitlePlaceHolderText" xml:space="preserve">
-    <value>Input N/A if Chat is selected</value>
+    <value>Input N/A if not applicable</value>
     <comment>Text to show in title place holder.</comment>
   </data>
   <data name="SessionExpired" xml:space="preserve">
